Cleanup/Refactor, JWKS, test